Fix flash message alignment and home slider width on Firefox

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -145,7 +145,6 @@ label.conditionally-required:after {
 .alert-success, .alert-warning, .alert-danger, .alert-notice, .alert-alert {
   margin-left: auto;
   margin-right: auto;
-  margin-top: -20px;
   padding-top: 10px;
   height: 40px;
   width: 100%;
